--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@
   h1 {
     color: white;
     text-align: center;
-    font-family:
+    font-family: inherit;
 }
 
   h2 {
@@ -18,7 +18,7 @@
 
   li {
      color: limegreen;
-     font-family:sans-serif;
+     font-family:fantasy;
      text-align: center;
   }
 
