--- a/CSS/IPstyles.css
+++ b/CSS/IPstyles.css
@@ -7,8 +7,8 @@ h1 {
 h2 {
   font-style: bold;
   font-family: cursive;
-  text-align: center;
-  color: white;
+  text-align: centre;
+  color: black;
 }
 
 p {
@@ -19,7 +19,7 @@ p {
 
 li {
    color: white;
-   font-family:fantasy;
+   font-family: "Verdana", Helvetica, sans-serif;
    text-align: center;
 }
 
@@ -30,4 +30,18 @@ body {
 
 .intro {
   font-style: oblique;
+}
+
+.sidebar{
+  width: 50px;
+  float: right;
+  color: orange;
+  text-align: right;
+}
+
+  .text-box{
+    border-left: 2px turquoise;
+    border-right: 2px turquoise;
+    border-top: 4px turquoise;
+    border-bottom: 4px black;
 }
